--- a/assets/css/artstyles.css
+++ b/assets/css/artstyles.css
@@ -33,25 +33,6 @@
     margin: 0;
 }
 
-title {
-    display: none;
-}
-
-.main {
-    display: flex;
-    justify-content: center !important;
-    align-content: center !important;
-    width: 100%;
-    height: 100%;
-    max-height: 800px;
-    max-width: 1000px;
-    padding: 0px;
-    margin: auto;
-    background-color: #d9c2ad;
-    padding: 25px 15px;
-
-}
-
 .nav {
     text-decoration: none;
     text-align: center;
@@ -60,7 +41,7 @@ title {
     width: 100%;
     display: inline-block;
     vertical-align: middle;
-    padding: 10px 85px 0px 40px;
+    padding: 10px 0px 0px 0px;
     font-family: "Itim";
     font-size: 50px;
     border-bottom: 8px solid #a57f60;
@@ -81,6 +62,7 @@ ul {
     justify-content: center !important;
     align-content: center !important;
     width: 100%;
+    padding: 0px 0px 0px 0px;
     display: inline-block;
     text-align: center;
     vertical-align: middle;
@@ -88,11 +70,20 @@ ul {
 
 li {
     display: inline-block;
-    justify-content: center;
-    align-content: center !important;
     text-align: center;
     position: relative;
+    justify-content: center !important;
+    align-content: center !important;
+    text-decoration: none;
+    list-style-type: none;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: -20px;
+    margin-bottom: -20px;
 }
+
 
 li a {
     width: 100%;
@@ -113,28 +104,33 @@ li a {
 
 .footer {
     display: flex;
-    justify-content: center;
-    position: relative;
-    font-family: 'Pacifico';
-    padding: 38px 10px;
+    justify-content: center !important;
+    align-content: center !important;
+    font-family: "Itim";
+    padding: 20px 0px;
     width: 100%;
-    color: #734954;
+    color: #a57f60 !important;
     font-size: 30px;
-    border-top: 8px solid #734954;
-    background-color: #D9C2AD;
+    border-top: 8px solid #a57f60;
+    background-color: #d9c2ad;
+}
+
+.footer p {
+    font-family: "Itim";
+    justify-content: center !important;
+    color: #906d51 !important;
+    font-size: 30px;
+    text-align: center;
 }
 
 body {
-    font-family: var(--body-font);
     font-weight: 100;
-    background-color: var(--body-color);
 }
 
 img {
     max-width: 100%;
     height: auto;
 }
-
 
 a {
     text-decoration: none !important;
@@ -149,7 +145,6 @@ a:hover {
     width: 100%;
     padding: 0px 0px;
 }
-
 
 /*=============== GALLERY ===============*/
 .gallery {
