--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,11 +26,6 @@
 }
 
 /*=============== BASE ===============*/
-* {
-    box-sizing: content-box;
-    padding: 0;
-    margin: 0;
-}
 
 body {
     background-image: url("/assets/images/background.png");
@@ -38,12 +33,15 @@ body {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    text-align: center;
+    margin: auto;
 }
 
 .main {
     display: flex;
     justify-content: center !important;
     align-content: center !important;
+    text-align: center;
     width: 100%;
     height: 100%;
     max-height: 800px;
@@ -61,40 +59,57 @@ body {
     justify-content: center !important;
     align-content: center !important;
     width: 100%;
+    margin: auto;
     display: inline-block;
+    position: relative;
     vertical-align: middle;
-    padding: 10px 85px 0px 40px;
+    padding: 10px 0px 0px 0px;
     font-family: "Itim";
     font-size: 50px;
     border-bottom: 8px solid #a57f60;
+    text-align: center;
     background-color: #d9c2ad;
 }
 
 .nav-table {
     width: 100%;
-    display: table;
+    display: grid;
     justify-content: center;
     align-content: center !important;
     text-align: center;
+    margin: auto;
 }
 
 ul {
     list-style-type: none;
     overflow: hidden;
     justify-content: center !important;
+    align-items: center;
     align-content: center !important;
     width: 100%;
     display: inline-block;
     text-align: center;
     vertical-align: middle;
+    margin: auto;
 }
 
 li {
-] display: inline-block;
-    justify-content: center;
-    align-content: center !important;
+    display: inline-block;
     text-align: center;
     position: relative;
+    justify-content: center !important;
+    align-content: center !important;
+    align-items: center;
+    text-decoration: none;
+    list-style-type: none;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
+    margin-top: -10px;
+    margin-bottom: -20px;
+    text-align: center;
+    min-width: 100px;
 }
 
 li a {
@@ -103,12 +118,18 @@ li a {
     vertical-align: middle;
     text-align: center;
     text-decoration: none;
+    justify-content: center !important;
+    align-content: center !important;
+    align-items: center;
 }
 
-.nav ul .logo {
+img {
     width: 100px;
+    display: block;
     margin-top: -10px;
-    justify-content: normal;
+    justify-content: center !important;
+    align-content: center !important;
+    align-items: center;
     border: 2px solid #906d51;
     text-align: center;
     border-radius: 200px;
@@ -118,6 +139,7 @@ title {
     display: flex;
     justify-content: center !important;
     align-content: center !important;
+    align-items: center;
 }
 
 h3 {
@@ -202,23 +224,6 @@ a:hover {
     color: #AB3521 !important;
     font-size: 60px;
     text-decoration: none;
-}
-
-ul {
-    display: flex;
-    justify-content: center !important;
-    align-content: center !important;
-}
-
-li {
-    display: flex;
-    justify-content: center !important;
-    align-content: center !important;
-    text-decoration: none;
-    list-style-type: none;
-    padding: 30px;
-    margin-top: -20px;
-    margin-bottom: -20px;
 }
 
 .social {
